@@ -12,28 +12,25 @@ v3 - Terminal + File System Update
 [O] Add Terminal app and basic command functionality
 - reboot [O]
 - help [O]
-[X] Add backing File System to mariOS
-[X] Add default files to the File System on boot
+[O] Add IP
+[O] Add backing File System to mariOS
+[O] Add default files to the File System on boot
 [X] Add commands related to the File System
 - rm [X]
-- cd [X]
-- ls [X]
-- scp [X]
+- cd [O]
+- ls [O]
 - cat [X]
+- mkdir [O]
 - exit [O]
 [O] Add functionality to easily access recently used commands
 
-v4 - Internet Update
-[O] Add IP
-[X] Add inter-computer interaction
-
-v5 - Chatting Update
+v4 - Chatting Update
 [X] Add the Chatroom app
 
-v6 - Web Browser Update
+v5 - Web Browser Update
 [X] Add the Web Browser app
 
-v7 - Hacking Update
+v6 - Hacking Update
 [X] Add the rest of the commands and associated program files
 - nc
 - hping3
@@ -42,9 +39,9 @@ v7 - Hacking Update
 - pswdcrk
 - sqlinject
 - dnslookup
-- update help
+- scp [X]
 
-v8 - Competition Update
+v7 - Competition Update
 [X] Add the Team Server to the game
 [X] Add a scoreboard and timer to keep track of the winning team
 
